--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markuplint": "^2.11.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3",
+    "react-bootstrap": "^2.7.4",
+    "react-icons": "^4.8.0"
   }
 }
