--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "bootstrap": "^5.2.3",
     "react-bootstrap": "^2.7.4",
     "react-icons": "^4.8.0",
