--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@elasticemail/elasticemail-client": "^4.0.23",
+    "@sendgrid/mail": "^8.1.1",
     "bootstrap": "^5.2.3",
     "react-bootstrap": "^2.7.4",
     "react-icons": "^4.8.0",
