--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "argon2": "^0.29.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
